06.2-Gateway API/5.traffic-splitting/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traffic-splitting
  labels:
    app: paytam
