06.2-Gateway API/5.traffic-splitting/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: paytam-gateway
  namespace: traffic-splitting
spec:
  gatewayClassName: gateway-api
  listeners:
    - name: http
      protocol: HTTP
      port: 80
