06.2-Gateway API/5.traffic-splitting/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paytam-traffic-split
  namespace: traffic-splitting
  labels:
    app: paytam
spec:
  parentRefs:
    - name: traffic-gateway
      namespace: traffic-splitting
  hostnames:
    - traffic-splitting.tagent.cfd
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        # 90% traffic goes to v1 (stable/production version)
        - name: paytam-svc-v1
          port: 80
          weight: 90
        # 10% traffic goes to v2 (canary/new version)
        - name: paytam-svc-v2
          port: 80
          weight: 10
